PR/45842: Henning Petersen: compare fgets with NULL not 0